--- a/index.html
+++ b/index.html
@@ -1938,6 +1938,22 @@ body > .main, body > .container-main {
     width: 300px;
   }
 }
+        
+@media (max-width: 600px) {
+  .container,
+  .main,
+  .container-main {
+    width: 100vw !important;
+    max-width: 100vw !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+  body {
+    overflow-x: hidden;
+  }
+}
 
 </style>
 </head>
