--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css">
-    <style>
-      *{
+    <style>*{
     margin: 0;
     padding: 0;
 }
@@ -1897,7 +1896,14 @@ body > .main, body > .container-main {
   }
 
 }
-    </style>
+
+@media(max-width: 477px){
+    .about-p-two, .about-p {
+    text-align: justify; 
+    word-break: break-word;
+    hyphens: auto;
+  }
+}</style>
 </head>
 <body>
     <header class="header">
@@ -1945,6 +1951,7 @@ body > .main, body > .container-main {
         <div class="promo-main-wrapper">
           <p class="promo-main">
             <span class="promo-main-title">
+              Специальные условия для студий керамики
             </span><br><br>
             Мастерская гончарных глин Коловерть предлагает специальные условия сотрудничества для студий керамики<br><br>
             Заполните форму и получите предложение
@@ -2052,7 +2059,7 @@ body > .main, body > .container-main {
                 </ul>
             </div>
             <div class="add-button-wrapper">
-                <a class="add-button product-button no-style-link" href="jupiter.html">купить</a>
+                <a class="add-button product-button no-style-link" href="/website/clays/jupiter/jupiter.html">купить</a>
                 <a class="about-clay-button product-button no-style-link" href="/website/aboutpage/jupiter description/jupiterdescription.html">подробнее</a>
             </div>
         </div>
@@ -2121,10 +2128,10 @@ body > .main, body > .container-main {
                     </ul>
                     <div class="footer-contact-imgs">
                     <div class="telegram-img-wrapper">
-                        <a href=" https://t.me/goncharnya_kolovert"><img src="assets/telegram.svg" alt="" class="telegram-img"></a>
+                        <a href=" https://t.me/goncharnya_kolovert"><img src="/assets/telegram.svg" alt="" class="telegram-img"></a>
                     </div>
                      <div class="vk-img-wrapper">
-                       <a href="https://vk.com/goncharnya_kolovert"><img src="assets/vk.svg" alt="" class="vk-img"></a> 
+                       <a href="https://vk.com/goncharnya_kolovert"><img src="/assets/vk.svg" alt="" class="vk-img"></a> 
                     </div>
                 </div>
                 </div>
