--- a/index.html
+++ b/index.html
@@ -2060,7 +2060,7 @@ body > .main, body > .container-main {
             </div>
             <div class="add-button-wrapper">
                 <a class="add-button product-button no-style-link" href="/website/clays/jupiter/jupiter.html">купить</a>
-                <a class="about-clay-button product-button no-style-link" href="/website/aboutpage/jupiter description/jupiterdescription.html">подробнее</a>
+                <a class="about-clay-button product-button no-style-link" href="jupiterdescription.html">подробнее</a>
             </div>
         </div>
     </div>
